Fixes pointer cursor not showing up in the reservations

--- a/src/onegov.org/onegov/org/theme/styles/org.scss
+++ b/src/onegov.org/onegov/org/theme/styles/org.scss
@@ -93,6 +93,10 @@ a:not([href]):not([role]) {
     cursor: default;
 }
 
+.fc-event {
+    cursor: pointer !important;
+}
+
 /*
     Hyphenation for browsers which support it.
 */
